# crap

./: .gitmodules  CMakeLists.txt  checkstuff.m  configuration.yaml  mkttys  run  togumstix
cmake/: FindEigen3.cmake  FindOpenCL.cmake  Findcpgl.cmake  Findcpplot.cmake
configuration/: camera_reader.yaml  controller.yaml  observer.yaml  offline.yaml  reality.yaml  reality_reader.yaml  sensor_reader.yaml
configuration/modes/: landing.yaml  ptaminit.yaml
include/crap/: base_types.hpp  communication.hpp  config.hpp  config.hpp.cmake  core.hpp  log.hpp  module.hpp  state_engine.hpp  time.hpp  types.hpp  utility.hpp  utils.hpp
include/crap/modules/: logic.hpp
include/crap/modules/observer/: model.hpp
include/math/: SConscript  math.hpp
include/math/control/: LQ.hpp  PID.hpp  linear_model.hpp  slicot.hpp
include/math/filtering/: ekf.hpp  filtering.hpp  ukf.hpp
interface/: 3diface.cpp  CMakeLists.txt  configuration.yaml  sender_config.yaml  simple_sender.cpp  spnav_utils.cpp  spnav_utils.hpp
interface/elements/camera/: camera.cpp  camera.hpp
interface/elements/flyer/: flyer.cpp  flyer.frag
interface/elements/glider/: glider.cpp
interface/elements/ground/: ground.hpp
interface/elements/terrain/: terrain.cpp  terrain.hpp
lib/: CMakeLists.txt
lib/linkquad/: CMakeLists.txt  conversion.hpp  convert.py  converted.hpp  serial_base.hpp  serial_communication.cpp  serial_communication.hpp  serial_data.hpp  serial_listener.hpp  serial_talker.hpp
lib/linkquad/PP/: README  auto_rec.hpp  bool.hpp  cat.hpp  comma.hpp  comma_if.hpp  config.hpp  eat.hpp  elem.hpp  empty.hpp  error.hpp  fold_left.hpp  fold_right.hpp  if.hpp  iif.hpp  plus.hpp  plus_if.hpp  rem.hpp  repeat.hpp
lib/linkquad/PP/dmc/: auto_rec.hpp
lib/linkquad/link_api/: messages.h  packet.c  packet.h  packet_types.c  packet_types.h  packet_types_defines.h  ring_buffer.c  ring_buffer.h  shared_definitions.h
lib/slicot/: CMakeLists.txt
modules/: CMakeLists.txt  comm_receiver.cpp  comm_sender.cpp  controller.cpp  logic.cpp  observer.cpp  sensor_reader.cpp  testmodule.cpp
modules/baselink/: CMakeLists.txt  baselink.cpp  comm_messages.hpp
modules/camera_reader/: CMakeLists.txt  camera_data.hpp  camera_reader.cpp
modules/controller/: CMakeLists.txt  configuration.yaml  controller.cpp  model.hpp
modules/logic/: CMakeLists.txt  governor.cpp  governor.hpp  hover.cpp  logic.cpp
modules/logic/modes/: CMakeLists.txt
modules/logic/modes/acrobat/: CMakeLists.txt  acrobat.cpp
modules/logic/modes/freeflight/: CMakeLists.txt  freeflight.cpp
modules/logic/modes/hover/: CMakeLists.txt  hover.cpp  hover.hpp
modules/logic/modes/landing/: CMakeLists.txt  landing.cpp
modules/logic/modes/ptaminit/: CMakeLists.txt  ptaminit.cpp
modules/model/: CMakeLists.txt  configuration.yaml  model.cpp  model.hpp  testcontrol.cpp  testrig.cpp
modules/observer/: CMakeLists.txt  configuration.yaml  observer.cpp
modules/reality/: 01_lb.selected_log  extract_state.sh  real_imu_data  real_states  reality.cpp
modules/reality_old/: CMakeLists.txt  reality.cpp
modules/sensor_reader/: CMakeLists.txt  sensor_data.hpp  sensor_reader.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  communication.cpp  core.cpp  core.hpp  log.cpp
